# nfs-ganesha

src/: CMakeLists.txt  nfs-ganesha.spec-in.cmake
src/FSAL/: CMakeLists.txt
src/FSAL/FSAL_NEWFS/: CMakeLists.txt  export.c  handle.c  internal.c  internal.h  main.c
src/FSAL/FSAL_NEWFS/newfs/: newfs_c.h
src/cmake/modules/: FindNEWFS.cmake
src/include/: fsal_pnfs.h
